--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 category_encoders==2.0.0
 eli5==0.10.0
-matplotlib==3.1.0
-numpy==1.17.1
-pandas==0.25.1
+matplotlib != 3.1.1
 pandas-profiling==2.3.0
 pdpbox==0.2.0
 plotly==4.1.0
@@ -11,5 +9,4 @@ scipy==1.3.1
 scikit-learn==0.21.3
 shap==0.29.3
 statsmodels==0.10.1
-tqdm==4.35.0
 xgboost==0.90
